--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,8 @@
-[tool.ruff]
+[tool.ruff.lint]
 line-length = 120
 select = ["E", "F", "W", "I"]
 ignore = []
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
+
