--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,47 @@
-fastapi
-uvicorn[standard]
-sqlalchemy
-python-dotenv
-requests
-pydantic-settings
-passlib[bcrypt]
-python-jose[cryptography]
-beautifulsoup4
-playwright
+annotated-types==0.7.0
+anyio==4.9.0
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+certifi==2025.7.9
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+colorama==0.4.6
+cryptography==45.0.5
+ecdsa==0.19.1
+fastapi==0.116.0
+greenlet==3.2.3
+h11==0.16.0
+httptools==0.6.4
+idna==3.10
+iniconfig==2.1.0
+packaging==25.0
+passlib==1.7.4
+playwright==1.53.0
+pluggy==1.6.0
+psycopg2==2.9.10
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.10.1
+pydantic_core==2.33.2
+pyee==13.0.0
+Pygments==2.19.2
+pytest==8.4.1
+python-dotenv==1.1.1
+python-jose==3.5.0
+python-multipart==0.0.20
+PyYAML==6.0.2
+requests==2.32.4
+rsa==4.9.1
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+SQLAlchemy==2.0.41
+starlette==0.46.2
+typing-inspection==0.4.1
+typing_extensions==4.14.1
+urllib3==2.5.0
+uvicorn==0.35.0
+watchfiles==1.1.0
+websockets==15.0.1
