--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ beautifulsoup4==4.13.4
 certifi==2025.7.9
 cffi==1.17.1
 charset-normalizer==3.4.2
-click==8.2.1
+click>=8.0.0
 colorama==0.4.6
 cryptography==45.0.5
 ecdsa==0.19.1
@@ -27,7 +27,6 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 pyee==13.0.0
 Pygments==2.19.2
-pytest==8.4.1
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
