--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="postgresql://user:password@host:port/database_name"
+DATABASE_URL="postgresql://p2p_dashboard_user:4scr5XwawprE0cHtx7TJe6w8F7e994q5@dpg-d1omv9ffte5s73bhth20-a.oregon-postgres.render.com/p2p_dashboard"
+
