--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ pytest-mock==3.14.0
 httpx==0.27.0
 # git-filter-repo is a tool, not a runtime dependency, so it's commented out
 # git-filter-repo==2.37.0
+pydantic-settings==2.3.4
