--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,1 @@
-# Environments
-.env # Local environment variables - DO NOT COMMIT
-**/.env # Ignore .env files in subdirectories
-.venv/
-venv/
-
-# IDE / Editor specific
-.vscode/
-.idea/
-
-# Python Caches
-__pycache__/
-.pytest_cache/
-.ruff_cache/
-*.py[cod]
-*$py.class
-
-# SQLite databases
-*.db
-*.sqlite3
-
-# Build artifacts
-build/
-dist/
-*.egg-info/
-
-# Log files
-*.log
-logs/
+fixes.md
