--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,5 @@ httpx==0.27.0
 # git-filter-repo is a tool, not a runtime dependency, so it's commented out
 # git-filter-repo==2.37.0
 pydantic-settings==2.3.4
+APScheduler==3.10.4
+prometheus_client==0.19.0
